@@ -1,3 +1,11 @@
+2004-09-11  Kingpin  <mthurn@verizon.net>
+
+	* lib/WWW/Search/Yahoo/DE.pm (_where_to_find_count): new private method
+
+	* lib/WWW/Search/Yahoo.pm (_where_to_find_count): new private method
+
+	* lib/WWW/Search/Yahoo/News/Advanced.pm (parse_tree): handle new HTML formatting
+
 2004-05-17  Kingpin  <mthurn@verizon.net>
 
 	* lib/WWW/Search/Yahoo/DE.pm: fix version number
